# espresso-controller

./: .gitignore  Makefile  README.md
.claude/: launch.json
.github/workflows/: deploy-pages.yml
docs/: results.md  writeup.md
firmware/: CMakeLists.txt
firmware/App/actuators/: actuators.c  actuators.h
firmware/App/control/: adaptive.c  adaptive.h  controller_interface.h  kalman.c  kalman.h  pid.c  pid.h
firmware/App/ml/: ml_inference.c  ml_inference.h
firmware/App/sensors/: sensors.c  sensors.h
firmware/App/supervisor/: supervisor.c  supervisor.h
firmware/App/telemetry/: telemetry.c  telemetry.h
firmware/Core/Src/: main.c
firmware/Tests/: CMakeLists.txt  test_cobs.c  test_kalman.c  test_pid.c
host/: requirements.txt
host/dashboard/: dashboard.py
host/simulator/: index.html  simulator.js
host/sysid/: benchmark.py  system_identification.py
host/training/: train_resistance_model.py
simulink/: README.md
